# dotfiles

./: .alacritty.yml  .editorconfig  .fonts.conf  .gitconfig  .gitignore  .pylintrc  .sops.yaml  .tmux.conf  .zimrc  .zshrc  flake.nix  justfile
config/: .editorconfig  .gitconfig  .gitignore  flake8  starship.toml
config/ags/: app.ts  babel.config.json  biome.json  config.js  env.d.ts  package.json  plugin-transform-ags-jsx.js  pnpm-lock.yaml  tsconfig.json  utils.ts
config/alacritty/: alacritty.toml  keybindings.toml
config/atuin/: config.toml
config/claude/: statusline.sh
config/doom/: config.el  init.el  packages.el
config/fontconfig/: fonts.conf
config/ghostty/: config
config/git/: ignore
config/hypr/: desktop.conf  hyprland.conf  hyprpaper.conf  keybindings.conf  laptop.conf  nvidia.conf  plugin.conf  startup.conf  variables.conf
config/hyprpanel/: config.json
config/imv/: config
config/kanata/: default.kbd
config/lazydocker/: config.yml
config/lazygit/: config.yml
config/mako/: config
home-manager/: flake.nix  home.nix  tmux.conf
lem/: init.lisp
nixos/: configuration.nix  hardware-configuration.nix
nvim/: general.vimrc  init.vim  keys.vimrc  plugins.vimrc
nyxt/: config.lisp  init.lisp  slynk.lisp
scripts/: keyboard.sh  monitor.sh  tablet.sh
stumpwm.d/: application.lisp  font.lisp  init.lisp  keybindings.lisp  modeline.lisp  system.lisp
ty/: README.md  pyproject.toml
ty/src/ty/cli/: __init__.py
ubuntu_setup/: 01-setup-core.sh  02-setup-customize.sh  TODO.md  helpers.sh
zsh/: aliases.sh  env.sh  functions.sh
(+409 files in other folders)
