[tool.poetry]
name = "ty"
version = "0.1.0"
description = ""
readme = "README.md"
packages = [{include = "ty", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.3.0"
mypy = "^1.1.1"

[tool.poetry.scripts]
ty = "ty.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
